Update all the things.